--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <!--modal container-->
     <div id="modalContainer" class="modal-container"></div>
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./JS/carrito.js"></script>
     <script src="./JS/products.js"></script>
     <script src="./JS/app.js"></script>
