--- a/index.html
+++ b/index.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./CSS/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./CSS/style.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <!--navbar-->
     <div class="nav-container">
-        <nav class="navbar">
+      <nav class="navbar">
         <h1 class="navbar-logo">Shop,</h1>
-        <h1 class="ver-carrito" id="verCarrito">🛒 <span id="cantidadCarrito" class="cantidad-carrito"></span></h1>
-        </nav>
+        <h1 class="ver-carrito" id="verCarrito">
+          🛒 <span id="cantidadCarrito" class="cantidad-carrito"></span>
+        </h1>
+      </nav>
     </div>
 
     <!--banner-->
     <div class="banner">
-        <div class="banner-container">
-            <h1>Mundo analogico</h1>
-            <p>El mejor lugar para comprar tu camara analogica</p>
-        </div>
+      <div class="banner-container">
+        <h1>Mundo analogico</h1>
+        <p>El mejor lugar para comprar tu camara analogica</p>
+      </div>
     </div>
 
     <!--Shop content-->
@@ -34,5 +36,5 @@
     <script src="./JS/carrito.js"></script>
     <script src="./JS/products.js"></script>
     <script src="./JS/app.js"></script>
-</body>
+  </body>
 </html>
